# soque

./: .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  pyproject.toml  pyrightconfig.json
include/soque/: mpi_hdf.hpp  utils.hpp
src/: soque_ext.cpp
src/soque/: __init__.py  comm_interface.py  util.py
tests/: remove_test_par.py  remove_test_seq.py  sort_test_par.py  sort_test_seq.py
